--- a/views/editstudent.ejs
+++ b/views/editstudent.ejs
@@ -14,7 +14,7 @@
       <label for="Address">Address</label><br>
       <input type="text" name="address" value="<%= student.address %>"><br>
       <label for="birth_date">Birth Date  </label><br>
-      <input type="date" name="birth_date" value=<%= student.birth_date %>><br>
+      <input type="date" name="birth_date" value=<%= date(student.birth_date) %>><br>
       <label for="gender">Gender</label><br>
       <input type="text" name="gender" value="<%= student.gender %>"><br>
       <label for="email">Email</label><br>
